# physiological_score

./: .dockerignore  .gitignore  CMakeLists.txt  Dashboard.hpp  Dockerfile  ICU.cpp  ICU.hpp  Led.hpp  Makefile  NEWSCalculator.cpp  NEWSCalculator.hpp  NEWS_System  Observer.hpp  Parameters.hpp  Patient.hpp  README.md  build_and_test.sh  docker-compose.yml  main.cpp  test_dashboard.cpp  test_icu.cpp  test_led.cpp  test_newscalculator.cpp  test_parameters.cpp  test_patient.cpp
